Agregar validaciones en el cotizador

--- a/app/chat/chat.html
+++ b/app/chat/chat.html
@@ -21,7 +21,7 @@
             </div>
             <div class="back-3">
                 <button id="chat-login" ac-validator ng-click="chatCtrl.loginChat();">
-                    <div class="arrow-up position-up"></div>Ingresar
+                    <div class="arrow-up position-up" style="right: 15px;"></div>Ingresar
                 </button>
             </div>
             <div class="send-mail ac-mensaje-custom-show" ng-if="chatCtrl.enviando">
