--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -305,7 +305,7 @@
 
         <div class="back-3">
             <button id="enviar-cotizacion" ac-validator ng-click="cotizadorCtrl.sendMail();">
-                <div class="arrow-up position-up"></div> Pedir Cotización
+                <div class="arrow-up position-up" style="right: 35px;"></div> Pedir Cotización
             </button>
         </div>
 
