--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -166,13 +166,19 @@
                             <label>Solicitar:</label>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="radio" ng-model="cotizadorCtrl.hosting_y_correo" value="1"><span class="">Sí</span>
+                            <input type="radio" ng-model="cotizadorCtrl.hosting_y_correo" value="1"
+                                   ng-click="cotizadorCtrl.enablePlanHosting(1);">
+                            <span class="">Sí</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="radio" ng-model="cotizadorCtrl.hosting_y_correo" value="2"><span class="">No, ya tengo el hosting</span>
+                            <input type="radio" ng-model="cotizadorCtrl.hosting_y_correo" value="2"
+                                   ng-click="cotizadorCtrl.enablePlanHosting(2);">
+                            <span class="">No, ya tengo el hosting</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="radio" ng-model="cotizadorCtrl.hosting_y_correo" value="3"><span class="">No estoy seguro</span>
+                            <input type="radio" ng-model="cotizadorCtrl.hosting_y_correo" value="3"
+                                   ng-click="cotizadorCtrl.enablePlanHosting(3);">
+                            <span class="">No estoy seguro</span>
                         </div>
                     </div>
                     <div class="container-colum" style="flex: 1 1 auto;">
@@ -180,7 +186,7 @@
                             <label>Plan del Hosting:</label>
                             <select ng-model="cotizadorCtrl.hosting_selected"
                                     ng-options="plan_hosting.nombre for plan_hosting in cotizadorCtrl.plan_hosting"
-                                    class="form-control">
+                                    class="form-control" ng-disabled="!cotizadorCtrl.enableHosting">
                             </select>
                         </div>
                     </div>
