--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <!--meta charset="utf-8"-->
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>AC-Desarrollos</title>
   <meta name="description" content="">
@@ -592,7 +592,7 @@
 
   <div class="footer">
     <p>
-      Copyright © 2016 - All Rights Reserved - <a href="http://ac-desarrollos.com/" class="footer-link">www.ac-desarrollos.com </a>
+      Copyright Â© 2016 - All Rights Reserved - <a href="http://ac-desarrollos.com/" class="footer-link">www.ac-desarrollos.com </a>
       - Tel (011) 3111-5006 - <a href="http://ac-desarrollos.com/" class="footer-link">ventas@ac-desarrollos.com</a>
     </p>
   </div>
