--- a/app/noticia/noticia.html
+++ b/app/noticia/noticia.html
@@ -27,12 +27,9 @@
                 <div>{{comentario.detalles}}</div>
             </div>
         </div>
-        <!--div class="back">
-            <div class="arrow-left"></div>
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/noticias'});">Volver</a>
-        </div-->
+
         <div class="back-2">
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/#'});">
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/noticias'});">
                 <div class="arrow-left"></div> Volver
             </a>
         </div>
