--- a/app/hacemos/hacemos.html
+++ b/app/hacemos/hacemos.html
@@ -46,7 +46,7 @@
                     <h3 class="color-primary">Desarrollos a medida:</h3>
                     <p>Si tenés una idea, nosotros te damos un plan para implementarla de una forma seria y aplicando todas las nuevas tecnologias del mercado.</p>
                     <br>
-                    <p>No importa como sea tu negocio, siempre podés contar con nosotros para poder llevar a cabu tu proyecto.</p>
+                    <p>No importa como sea tu negocio, siempre podés contar con nosotros para poder llevar a cabo tu proyecto.</p>
                     <br>
                     <p>Todos nuestros diseños y desarrollos estan pensados de acuerdo a las necesidades y el negocio de nuestro cliente, cada página es una experiencia única e irrepetible.</p>
                 </div>
@@ -63,7 +63,7 @@
 
 
         <div class="back-2">
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/#'});">
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/mision'});">
                 <div class="arrow-left"></div> Volver
             </a>
         </div>
