--- a/app/mision/mision.html
+++ b/app/mision/mision.html
@@ -20,7 +20,7 @@
       </p>
     </div>
     <div class="back-2">
-      <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/#'});">
+      <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/mision'});">
         <div class="arrow-left"></div> Volver
       </a>
     </div>
