--- a/app/noticias/noticias.html
+++ b/app/noticias/noticias.html
@@ -95,7 +95,7 @@
         </div>
 
         <div class="back-2">
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/#'});">
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/mision'});">
                 <div class="arrow-left"></div> Volver
             </a>
         </div>
