Mejoras en la navegación

--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -1,3 +1,22 @@
+<!-- Google Code for Cotizar Conversion Page -->
+<script type="text/javascript">
+    /* <![CDATA[ */
+    var google_conversion_id = 956728168;
+    var google_conversion_language = "en";
+    var google_conversion_format = "3";
+    var google_conversion_color = "ffffff";
+    var google_conversion_label = "xMWQCOyv2mQQ6IaayAM";
+    var google_remarketing_only = false;
+    /* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+    <div style="display:inline;">
+        <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/956728168/?label=xMWQCOyv2mQQ6IaayAM&amp;guid=ON&amp;script=0"/>
+    </div>
+</noscript>
+
 <div ng-controller="CotizadorController as cotizadorCtrl" class="container container-color-2 container-menu-margin">
     <div class="container-info" form-id="cotizador">
         <h1>Cotizador en Línea</h1>
