--- a/app/hacemos/hacemos.html
+++ b/app/hacemos/hacemos.html
@@ -70,15 +70,15 @@
 
         <div class="slider-indicator">
             <div class="slider_1" ng-class="{slider_selected:hacemosCtrl.slider_nro==1}"
-                 ng-click="hacemosCtrl.slider_nro=1;"></div>
+                 ng-click="hacemosCtrl.showSlider(1);"></div>
             <div class="slider_2" ng-class="{slider_selected:hacemosCtrl.slider_nro==2}"
-                 ng-click="hacemosCtrl.slider_nro=2;"></div>
+                 ng-click="hacemosCtrl.showSlider(2);"></div>
             <div class="slider_3" ng-class="{slider_selected:hacemosCtrl.slider_nro==3}"
-                 ng-click="hacemosCtrl.slider_nro=3;"></div>
+                 ng-click="hacemosCtrl.showSlider(3);"></div>
             <div class="slider_4" ng-class="{slider_selected:hacemosCtrl.slider_nro==4}"
-                 ng-click="hacemosCtrl.slider_nro=4;"></div>
+                 ng-click="hacemosCtrl.showSlider(4);"></div>
             <div class="slider_5" ng-class="{slider_selected:hacemosCtrl.slider_nro==5}"
-                 ng-click="hacemosCtrl.slider_nro=5;"></div>
+                 ng-click="hacemosCtrl.showSlider(5);"></div>
         </div>
     </div>
 </div>
