--- a/app/index.html
+++ b/app/index.html
@@ -423,7 +423,8 @@
                 'bower_components/ac-angular-utils/ac-utils.min.js',
                 'bower_components/ac-angular-contacts/ac-contacts.min.js',
                 'bower_components/ac-angular-noticias/ac-noticias.js',
-                'https://cdn.firebase.com/js/client/2.2.1/firebase.js'
+                'https://cdn.firebase.com/js/client/2.2.1/firebase.js',
+                'http://www.googleadservices.com/pagead/conversion_async.js'
             ], 'segundo');
 
             $script.ready('segundo', function () {
@@ -451,6 +452,39 @@
         if (raf) raf(cb);
         else window.addEventListener('load', cb);
     </script>
+
+    <!-- Google Code for Contacto Conversion Page
+    In your html page, add the snippet and call
+    goog_report_conversion when someone clicks on the
+    chosen link or button. -->
+    <script type="text/javascript">
+        /* <![CDATA[ */
+        goog_snippet_vars = function() {
+            var w = window;
+            w.google_conversion_id = 956728168;
+            w.google_conversion_label = "_8PjCNaT810Q6IaayAM";
+            w.google_remarketing_only = false;
+        }
+        // DO NOT CHANGE THE CODE BELOW.
+        goog_report_conversion = function(url) {
+            goog_snippet_vars();
+            window.google_conversion_format = "3";
+            var opt = new Object();
+            opt.onload_callback = function() {
+                if (typeof(url) != 'undefined') {
+                    window.location = url;
+                }
+            }
+            var conv_handler = window['google_trackConversion'];
+            if (typeof(conv_handler) == 'function') {
+                conv_handler(opt);
+            }
+        }
+        /* ]]> */
+    </script>
+    <!--script type="text/javascript"
+            src="//www.googleadservices.com/pagead/conversion_async.js">
+    </script-->
 
 </head>
 <body ng-controller="AppController as appCtrl" style="position: relative;">
