--- a/app/noticias/noticias.html
+++ b/app/noticias/noticias.html
@@ -22,6 +22,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
+                        <div class="noticia-fecha">Fecha: {{noticia.fecha}}</div>
                         <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver</button>
                     </div>
                 </div>
@@ -35,6 +36,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
+                        <div class="noticia-fecha">Fecha: {{noticia.fecha}}</div>
                         <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver</button>
                     </div>
                 </div>
@@ -48,6 +50,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
+                        <div class="noticia-fecha">Fecha: {{noticia.fecha}}</div>
                         <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver</button>
                     </div>
                 </div>
@@ -61,6 +64,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
+                        <div class="noticia-fecha">Fecha: {{noticia.fecha}}</div>
                         <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver</button>
                     </div>
                 </div>
@@ -74,6 +78,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
+                        <div class="noticia-fecha">Fecha: {{noticia.fecha}}</div>
                         <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver</button>
                     </div>
                 </div>
@@ -89,6 +94,7 @@
                 <div class="noticia-info">
                     <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                     <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
+                    <div class="noticia-fecha">Fecha: {{noticia.fecha}}</div>
                     <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver</button>
                 </div>
             </div>
